@@ -32,6 +32,8 @@ V3.4.4 (2019-XX-XX)
 
 * Maintenance fix: added precondition of unchanged Plan in phase2
 
+* Allow MoveShard from leader to a follower, thus swapping the two
+
 v3.4.3 (2019-02-19)
 -------------------
 
